--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 /*-----------------------------------------------------------
 
-Template Name: BlackDsn - Ajax Portfolio HTML Template
-  Template URI: http://theme.dsngrid.com/blackdsn
-  Description: BlackDsn Ajax Portfolio Showcase HTML Template
-  Author: design_grid
-  Author URI: https://themeforest.net/user/design_grid
+Template Name: 
+  Template URI: 
+  Description: 
+  Author: 
+  Author URI: 
   Version: 1.0.0
 
 -------------------------------------------------------------*/
